<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="title_settings">Settings</string>
    <string name="title_categories">Categories</string>
    <string name="title_members">Family Members</string>
    <string name="title_add_category">Add Category</string>
    <string name="title_add_entry">Add Wallet Entry</string>
    <string name="title_add_member">Add Member</string>
    <string name="title_edit_category">Edit Category</string>
    <string name="title_edit_entry">Edit Wallet Entry</string>
    <string name="title_edit_member">Edit Member</string>

    <string name="web_client_id">462940546100-qmglt5jumb88dbmsk4k8frr0tgogblkl.apps.googleusercontent.com</string>
    <string name="select_color">Select color</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="add_member">Add Member</string>
    <string name="member_name">Member Name</string>
    <string name="login_title">Please login with your Google account.</string>
    <string name="login_detail">Don\'t worry, you can still use this app when you are offline. Your changes will be automatically stored in database when you connect to internet.</string>
    <string name="choose_type">Choose type:</string>
    <string name="select_category">Select Category</string>
    <string name="select_member">Select Member</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="top_expenses">Top expenses:</string>
    <string name="last_100_elements">Last 100 elements:</string>

    <string name="pref_key_categories">custom_categories</string>
    <string name="pref_key_members">members</string>
    <string name="pref_key_logout">logout</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="account_balance">Account balance</string>
</resources>
